@@ -21,3 +21,4 @@
 - qwtGetMin/qwtGetMax removed, qwtFloor/qwtCeil added
 - LOG_MIN/LOG_MAX removed, use QwtTransform::LogMin/LogMax instead ( values differ ! )
 - QwtAbstractScaleDraw::setPenWidth changed to setPenWidthF/setPenCosmetic
+- qwt_compat.h removed
